TOOL-538 make sure the dropzone form errors and text align center when appearing in dropzone dialog modals

--- a/src/AppBundle/Resources/assets/css/sass/components/_dropzone.scss
+++ b/src/AppBundle/Resources/assets/css/sass/components/_dropzone.scss
@@ -137,4 +137,8 @@
     display: block;
     margin: auto;
   }
+
+  .dropzone-form-errors {
+    text-align: center;
+  }
 }
